refactored navbar to be mobile first. Fixed issue with nav on mobile sideways position

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -330,7 +330,7 @@ html {
   scroll-behavior: smooth; }
 
 /* NAVIGATION START */
-@media (max-width: 40rem) {
+@media (max-width: 30rem), (max-height: 30rem) {
   body {
     overflow-x: hidden; } }
 
@@ -343,26 +343,57 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 5vw; }
+  padding: 2rem; }
   .nav-top__logo {
     color: #fff; }
-  @media (max-width: 40rem) {
+  @media (min-width: 30rem) and (min-height: 30rem) {
     .nav-top {
-      padding: 2rem; } }
+      padding: 0 5vw; } }
 
 .menu {
-  background-color: #242938;
   display: flex;
-  justify-content: space-between;
-  width: 30rem;
-  margin-left: 2rem; }
+  border-left: 5px solid #1cb890;
+  border-bottom: 5px solid #1cb890;
+  overflow: hidden;
+  transform: translateX(90vw);
+  top: 8vh;
+  right: 0;
+  position: absolute;
+  flex-direction: column;
+  flex-wrap: wrap;
+  padding: 2rem;
+  height: 80vh;
+  width: 80vw;
+  justify-content: space-around;
+  align-items: center;
+  transition: transform 1s ease-in;
+  background-color: #242938; }
+  @media (min-width: 30rem) and (min-height: 30rem) {
+    .menu {
+      justify-content: space-between;
+      width: 30rem;
+      margin-left: 2rem;
+      transform: translateX(0);
+      top: 0;
+      position: relative;
+      flex-direction: row;
+      height: 100%;
+      width: 100%;
+      border-left: none;
+      border-bottom: none; } }
   .menu__item {
+    max-width: 15rem;
+    font-size: 2rem;
+    opacity: 0;
     background-color: #242938;
     text-align: center;
     list-style: none;
     display: inline-block;
     color: #fff;
     transition: transform 0.3s ease-in; }
+    @media (min-width: 30rem) and (min-height: 30rem) {
+      .menu__item {
+        opacity: 1; } }
     .menu__item:hover {
       transform: rotateZ(5deg);
       transition: transform 0.3s ease-in;
@@ -398,28 +429,9 @@ html {
       display: block;
       padding: 2rem;
       min-width: 8rem; }
-  @media (max-width: 40rem) {
-    .menu {
-      border-left: 5px solid #1cb890;
-      border-bottom: 5px solid #1cb890;
-      overflow: hidden;
-      transform: translateX(90vw);
-      top: 8vh;
-      right: 0;
-      position: absolute;
-      flex-direction: column;
-      height: 80vh;
-      width: 80vw;
-      justify-content: space-around;
-      align-items: center;
-      transition: transform 1s ease-in; }
-      .menu__item {
-        max-width: 15rem;
-        font-size: 2rem;
-        opacity: 0; } }
 
 .menu-mobile__burger {
-  display: none;
+  display: inline-block;
   position: absolute;
   right: 2rem; }
   .menu-mobile__burger:hover {
@@ -447,9 +459,9 @@ html {
   .menu-mobile__burger--toggled .burger__line:nth-of-type(3) {
     transform: rotateZ(-30deg);
     transition: transform 1s; }
-  @media (max-width: 40rem) {
+  @media (min-width: 30rem) and (min-height: 30rem) {
     .menu-mobile__burger {
-      display: inline-block; } }
+      display: none; } }
 
 /* JavaScript function added classes */
 .toggle-mobile-nav {
