--- a/app/scss/layout/_navbar.scss
+++ b/app/scss/layout/_navbar.scss
@@ -10,9 +10,8 @@ html {
 }
 
 /* NAVIGATION START */
-
-@media(max-width: 40rem){
-	body {
+body {
+	@media(max-width: 30rem), (max-height: 30rem){
 		overflow-x: hidden;
 	}
 }
@@ -26,31 +25,66 @@ html {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 0 5vw;
-
+	padding: 2rem;
 	&__logo{
 		color: #fff;
 	}
 
-	@media(max-width: 40rem){
-		padding: 2rem;
+	@media(min-width: 30rem) and (min-height: 30rem){
+		padding: 0 5vw;
 	}
 }
 
  .menu {
-	background-color: $color-main;
+
+
 	display: flex;
-	justify-content: space-between;
-	width: 30rem;
-	margin-left: 2rem;
+	border-left: 5px solid $color-accent;
+	border-bottom: 5px solid $color-accent;
+	overflow: hidden;
+	transform: translateX(90vw);
+	top: 8vh;
+	right: 0;
+	position: absolute;
+	flex-direction: column;
+	flex-wrap: wrap;
+	padding: 2rem;
+	height: 80vh;
+	width: 80vw;
+	justify-content: space-around;
+	align-items: center;
+	transition: transform 1s ease-in;
+	background-color: $color-main;
+
+	@media(min-width: 30rem) and (min-height: 30rem) {
+		justify-content: space-between;
+		width: 30rem;
+		margin-left: 2rem;
+		transform: translateX(0);
+		top:0 ;
+		position: relative;
+		flex-direction: row;
+		height: 100%;
+		width: 100%;
+		border-left: none;
+		border-bottom: none;
+	}
+	
 
 	&__item{
+		max-width: 15rem;
+		font-size: 2rem;
+		opacity: 0;
 		background-color: $color-main;
 		text-align: center;
 		list-style: none;
 		display: inline-block;
 		color:#fff;
 		transition: transform 0.3s ease-in;
+
+		@media(min-width: 30rem) and (min-height: 30rem){
+			opacity: 1;
+		}
 
 		&:hover {
 			transform: rotateZ(5deg);
@@ -103,32 +137,12 @@ html {
 		
 	}
 
-	@media(max-width: 40rem) {
-		border-left: 5px solid $color-accent;
-		border-bottom: 5px solid $color-accent;
-		overflow: hidden;
-		transform: translateX(90vw);
-		top: 8vh;
-		right: 0;
-		position: absolute;
-		flex-direction: column;
-		height: 80vh;
-		width: 80vw;
-		justify-content: space-around;
-		align-items: center;
-		transition: transform 1s ease-in;
 
-		&__item {
-			max-width: 15rem;
-			font-size: 2rem;
-			opacity: 0;
-		}
-	}
 
 }
 
 .menu-mobile__burger {
-	display: none;
+	display: inline-block;
 	position: absolute;
 	right: 2rem;
 
@@ -170,8 +184,8 @@ html {
 		}
 	}
 
-	@media(max-width: 40rem){
-		display: inline-block;
+	@media(min-width: 30rem) and (min-height: 30rem) {
+		display: none;
 	}
 }
 
